--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
+ 
 <h1>DIO</h1>
-<nav>
+
     <main>
         <header>
             <h1>Holy Diver</h1>
             <img src="DioHolyDiver.jpg"
-        </header>
-    <nav>
+        </header> 
+       
+        <nav>
             <ol>
-<l1>Stand Up and Shout</l1> <br>
+<l1>
+    <a href="#stand-up-and-shout" </a></a> Stand Up and Shout </l1> 
+    <br>
 <l2>Holy Diver</l2><br>
 <l3>Gypsy</l3><br>
 <l4>Caught in the Middle</l4><br>
@@ -29,7 +32,8 @@
 </ol>
 </nav>
 
-<section>
+<section id="stand-up-and-shout">
+    <h2>Stand up and shout</h2>
     <p1>It's the same old song<br>
     You've gotta be somewhere at sometime<br>
     They never let you fly</p1><br>
@@ -70,7 +74,52 @@
 </section>
 
 <section>
-
+<h2>Holy Diver</h2>
+<p>Mmmmhhh mhmm, yeah yeah<br>
+Holy diver<br>
+You've been down too long in the midnight sea<br>
+Oh what's becoming of me</p><br>
+<p>Ride the tiger<br>
+You can see his stripes but you know he's clean<br>
+Oh don't you see what I mean</p><br>
+<p>Gotta get away<br>
+Holy diver</p><br>
+<p>Shiny diamonds<br>
+Like the eyes of a cat in the black and blue<br>
+Something is coming for you<br>
+Look out</p><br>
+<p>Race for the morning<br>
+You can hide in the sun 'till you see the light<br>
+Oh we will pray it's all right</p><br>
+<p>Gotta get away, get away</p><br>
+<p>Between the velvet lies<br>
+There's a truth that's hard as steel<br>
+The vision never dies<br>
+Life's a never ending wheel</p><br>
+<p>Holy diver<br>
+You're the star of the masquerade<br>
+No need to look so afraid</p><br>
+<p>Jump, jump<br>
+Jump on the tiger<br>
+You can feel his heart but you know he's mean<br>
+Some light can never be seen, yeah</p><br>
+<p>Holy diver<br>
+You've been down too long in the midnight sea<br>
+Oh what's becoming of me<br>
+No, no</p><br>
+<p>Ride the tiger<br>
+You can see his stripes but you know he's clean<br>
+Oh don't you see what I mean</p><br>
+<P>Gotta get away, get away<br>
+Gotta get away, get away<br>
+Holy diver, soul survivor<br>
+You' re the one whose clean<br>
+Holy diver, holy diver<br>
+Never come to knew, coming after you<br>
+Holy diver<br>
+Holy diver, yeah</P><br>
+<p>Alright, get away, get away, get away<br>
+Holy diver, holy diver, holy diver mmhhmmm</p><br>
 
 
 
